add vercel adapter

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "@sveltejs/adapter-vercel": "next",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
     "node-html-parser": "^5.1.0",
