move sbd and parser back to devDependencies

--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "build": "svelte-kit build",
     "preview": "svelte-kit preview"
   },
-  "dependencies": {
-    "node-html-parser": "^5.1.0",
-    "sbd": "^1.0.19"
-  },
   "devDependencies": {
     "@sveltejs/kit": "next",
     "@sveltejs/adapter-vercel": "next",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "node-html-parser": "^5.1.0",
+    "sbd": "^1.0.19"
   },
   "type": "module"
 }
