--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
     "@sveltejs/adapter-vercel": "next",
+    "@sveltejs/kit": "next",
+    "css-select": "^4.1.3",
+    "domutils": "^2.8.0",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
-    "svelte": "^3.42.6",
+    "htmlparser2": "^7.2.0",
     "node-html-parser": "^5.1.0",
-    "sbd": "^1.0.19"
+    "sbd": "^1.0.19",
+    "svelte": "^3.42.6"
   },
   "type": "module"
 }
